Criacao da Entidade Carro: Model, controller e Migrate
